# Foundation

./: .gitignore  README.md
inc/: Foundation.hpp
inc/Dream/: Foundation.hpp
inc/Dream/Foundation/: Cryptography.hpp  Essential.hpp  IO.hpp  Logging.hpp  System.hpp
inc/Dream/Foundation/Cryptography/: Checksum.hpp  Exception.hpp  HashAlgorithm.hpp  MD5.hpp  Nilsimsa.hpp  SHA1.hpp
inc/Dream/Foundation/Essential/: Abstract.hpp  Action.hpp  Algorithm.hpp  Assert.hpp  BaseTypes.hpp  Bitset.hpp  Convert.hpp  Exception.hpp  Noncopyable.hpp  Nullable.hpp  Platform.hpp  Results.hpp  Stream.hpp  String.hpp  Time.hpp  TypeTraits.hpp  Types.hpp
inc/Dream/Foundation/IO/: Directory.hpp  Exception.hpp  File.hpp  FileAccessRights.hpp  FileFeatures.hpp  FileMap.hpp  FileMapAccessRights.hpp  FileOpenMode.hpp  FileSeekMode.hpp  FileShareMode.hpp  FileStream.hpp  FileView.hpp  FileViewAccessRights.hpp  Redirection.hpp  Scan.hpp  ScanListener.hpp
inc/Dream/Foundation/Logging/: ConsolePublisher.hpp  Exception.hpp  FilePublisher.hpp  Filter.hpp  Formatter.hpp  FunctionMarker.hpp  Handler.hpp  HandlerListener.hpp  Journal.hpp  Level.hpp  Manager.hpp  Publisher.hpp  Record.hpp  TextFormatter.hpp  XmlFormatter.hpp
inc/Dream/Foundation/System/: Console.hpp  ConsoleInputMode.hpp  ConsoleOutputMode.hpp  Environment.hpp  Exception.hpp
inc/Foundation/: Essential.hpp
inc/Foundation/Essential/: Abstract.hpp  Action.hpp  Algorithm.hpp  BaseTypes.hpp  Convert.hpp  Exception.hpp  Noncopyable.hpp  Nullable.hpp  Platform.hpp  Results.hpp  Stream.hpp  String.hpp  Time.hpp  Types.hpp
lib/: Dream.Foundation.Essential-vc110-mt-gd.lib  Dream.Foundation.Essential-vc110-mt.lib  Dream.Foundation.IO-vc110-mt-gd.lib  Dream.Foundation.IO-vc110-mt.lib  Dream.Foundation.System-vc110-mt-gd.lib  Dream.Foundation.System-vc110-mt.lib
src/: CMakeLists.txt
src/Cryptography/: CMakeLists.txt
src/Cryptography/Tests/: Common.hpp  Main.cpp  TestChecksum.cpp  TestMD5.cpp  TestNilsimsa.cpp  TestSHA1.cpp
src/Essential/: CMakeLists.txt
src/IO/: CMakeLists.txt
src/Logging/: CMakeLists.txt
src/System/: CMakeLists.txt
